<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_above="@id/input_group">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/capsuula"
            android:text="SIGN UP"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher_foreground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="@font/capsuula"
            android:textColor="@color/colorLogoFront"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_your_expenses"
            android:textSize="15sp"
            android:textStyle="bold"
            android:fontFamily="@font/capsuula"
            android:textColor="@color/colorLogoFront"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@color/blackTransparent"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_top"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/capsuula"
            android:padding="8dp"
            android:layout_marginBottom="5dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/password"
            android:fontFamily="@font/capsuula"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/etConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bottom"
            android:hint="@string/confirm_password"
            android:fontFamily="@font/capsuula"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:fontFamily="@font/capsuula"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="SIGN UP"
            android:textAllCaps="false"
            android:textColor="#FE5295"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvSignText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:padding="10dp"
            android:text="Already Have an Account?  Sign in"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="#FAD0E1"
            android:fontFamily="@font/capsuula"/>

    </LinearLayout>

</RelativeLayout>