<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".userinfo.UserDetailsActivity">


    <LinearLayout
        android:id="@+id/linearLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@mipmap/ic_launcher_foreground" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/capsuula"
                    android:text="@string/app_name"
                    android:textColor="@color/colorLogoFront"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/capsuula"
                    android:text="@string/share_your_expenses"
                    android:textColor="@color/colorLogoFront"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/capsuula"
            android:text="Complete Your Profile Info"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutTop"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp">

        <EditText
            android:id="@+id/etFname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_top"
            android:fontFamily="@font/capsuula"
            android:hint="@string/first_name"
            android:inputType="text"
            android:padding="8dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etLname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_middle"
            android:fontFamily="@font/capsuula"
            android:hint="@string/last_name"
            android:inputType="text"
            android:padding="8dp"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/linearLayoutGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_middle"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/capsuula"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Gender"
                android:inputType="text"
                android:textSize="12sp" />

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:layout_marginStart="10dp">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/capsuula"
                    android:textSize="12sp"
                    android:text="Male"/>

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/capsuula"
                    android:textSize="12sp"
                    android:text="Female" />
            </RadioGroup>

        </LinearLayout>


        <EditText
            android:id="@+id/etMobNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bottom"
            android:fontFamily="@font/capsuula"
            android:hint="@string/mob_number"
            android:inputType="number"
            android:padding="8dp"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnSaveInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:fontFamily="@font/capsuula"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="Save Profile Information"
            android:textAllCaps="false"
            android:textColor="#FE5295"
            android:textSize="12sp" />


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="signout"
        android:text="Signout" />

</RelativeLayout>